# BAE_Mod

./: Cargo.toml  README.md
src/: adsr.rs  bandpass.rs  delay.rs  echo.rs  envelope.rs  gain.rs  generic.rs  highpass.rs  lib.rs  lowpass.rs  passthrough.rs
tests/: modifiers.rs
